--- a/trunk/099/pkg/combat/armor/itemdesc.cfg
+++ b/trunk/099/pkg/combat/armor/itemdesc.cfg
@@ -1932,6 +1932,7 @@ Armor 0x170B
 Armor 0x317a
 {
 	Name			ElvenBoots
+	desc			elven boots
 	AR			3
 	Coverage		Legs/feet
 	VendorSellsFor	60
@@ -2117,6 +2118,7 @@ Armor 0x1716
 Armor 0x27da
 {
 	Name			ClothNinjaHood
+	desc			cloth ninja hood
 	VendorSellsFor	10
 	VendorBuysFor	2
 	AR			4
