--- a/trunk/099/pkg/combat/weapons/itemdesc.cfg
+++ b/trunk/099/pkg/combat/weapons/itemdesc.cfg
@@ -417,27 +417,6 @@ Weapon 0x0f47
 	hitscript		:weapons:mainhit
 }
 
-Weapon 0x26bb
-{
-	Name			BoneHarvester
-	Speed		35
-	Damage		4d6+3
-	Attribute		Swords
-	MaxHP		150
-	Script		::bladed
-	HitSound		0x23C
-	MissSound		0x23A
-	Anim			0x9
-	MountedAnim	0x1A
-	VendorSellsFor	150
-	VendorBuysFor	60
-	blockcircle	1
-	equipscript	:combat:item_equip
-	unequipscript	:combat:item_unequip
-	hitscript		:weapons:mainhit
-}
-
-
 
 ///////////////////
 //  Two handed sword weapons
@@ -633,90 +612,6 @@ Weapon 0x143e
 	hitscript		:weapons:mainhit
 }
 
-Weapon 0x26ba
-{
-	Name			Scythe
-	Speed		23
-	Damage		6d6+3
-	Attribute		Swords
-	MaxHP		200
-	Script		::bladed
-	HitSound		0x23C
-	MissSound		0x23A
-	Anim			0xD
-	MountedAnim	0x1D
-	VendorSellsFor	200
-	VendorBuysFor	80
-	blockcircle	1
-	TwoHanded		1
-	equipscript	:combat:item_equip
-	unequipscript	:combat:item_unequip
-	hitscript		:weapons:mainhit
-}
-
-Weapon 0x26bd
-{
-	Name			BladedStaff
-	Speed		23
-	Damage		6d6+3
-	Attribute		Swords
-	MaxHP		200
-	Script		::bladed
-	HitSound		0x23C
-	MissSound		0x23A
-	Anim			0xD
-	MountedAnim	0x1D
-	VendorSellsFor	200
-	VendorBuysFor	80
-	blockcircle	1
-	TwoHanded		1
-	equipscript	:combat:item_equip
-	unequipscript	:combat:item_unequip
-	hitscript		:weapons:mainhit
-}
-
-Weapon 0x26c1
-{
-	Name			CrescentBlade
-	Speed		50
-	Damage		3d6+3
-	Attribute		Swords
-	MaxHP		200
-	Script		::bladed
-	HitSound		0x23C
-	MissSound		0x23A
-	Anim			0xD
-	MountedAnim	0x1D
-	VendorSellsFor	200
-	VendorBuysFor	80
-	blockcircle	1
-	TwoHanded		1
-	equipscript	:combat:item_equip
-	unequipscript	:combat:item_unequip
-	hitscript		:weapons:mainhit
-}
-
-Weapon 0x26ce
-{
-	Name			PaladinSword
-	Speed		23
-	Damage		6d6+3
-	Attribute		Swords
-	MaxHP		200
-	Script		::bladed
-	HitSound		0x23C
-	MissSound		0x23A
-	Anim			0xD
-	MountedAnim	0x1D
-	VendorSellsFor	200
-	VendorBuysFor	80
-	blockcircle	1
-	TwoHanded		1
-	equipscript	:combat:item_equip
-	unequipscript	:combat:item_unequip
-	hitscript		:weapons:mainhit
-}
-
 
 ///////////////////
 //  One handed fencing weapons
@@ -785,28 +680,6 @@ Weapon 0x1404
 	hitscript		:weapons:mainhit
 }
 
-Weapon 0x26c0
-{
-	Name			Lance
-	Speed		35
-	Damage		4d6+3
-	Attribute		Fencing
-	MaxHP		150
-	Script		::bladed
-	HitSound		0x23C
-	MissSound		0x23A
-	Anim			0xE
-	MountedAnim	0x1A
-	VendorSellsFor	150
-	VendorBuysFor	60
-	blockcircle	1
-	script		:combat:equipitem
-	equipscript	:combat:item_equip
-	unequipscript	:combat:item_unequip
-	hitscript		:weapons:mainhit
-}
-
-
 
 ///////////////////
 //  Two handed fencing weapons
@@ -865,48 +738,6 @@ Weapon 0x0e87
 	MissSound		0x23B
 	Anim			0xE
 	MountedAnim	0x1D
-	VendorSellsFor	200
-	VendorBuysFor	80
-	blockcircle	1
-	TwoHanded		1
-	script		:combat:equipitem
-	equipscript	:combat:item_equip
-	unequipscript	:combat:item_unequip
-	hitscript		:weapons:mainhit
-}
-
-Weapon 0x26be
-{
-	Name			Pike
-	Speed		23
-	Damage		6d6+3
-	Attribute		Fencing
-	MaxHP		200
-	HitSound		0x23D
-	MissSound		0x23B
-	Anim			0xE
-	MountedAnim	0x1A
-	VendorSellsFor	200
-	VendorBuysFor	80
-	blockcircle	1
-	TwoHanded		1
-	script		:combat:equipitem
-	equipscript	:combat:item_equip
-	unequipscript	:combat:item_unequip
-	hitscript		:weapons:mainhit
-}
-
-Weapon 0x26bf
-{
-	Name			DoubleBladedStaff
-	Speed		50
-	Damage		3d6+3
-	Attribute		Fencing
-	MaxHP		200
-	HitSound		0x23D
-	MissSound		0x23B
-	Anim			0xD
-	MountedAnim	0x1A
 	VendorSellsFor	200
 	VendorBuysFor	80
 	blockcircle	1
@@ -1046,27 +877,6 @@ Weapon 0x143c
 	hitscript		:weapons:mainhit
 }
 
-Weapon 0x26bc
-{
-	Name			Scepter
-	Speed		35
-	Damage		4d6+3
-	Attribute		Mace
-	MaxHP		100
-	HitSound		0x13C
-	MissSound		0x234
-	Anim			0xB
-	MountedAnim	0x1A
-	VendorSellsFor	70
-	VendorBuysFor	20
-	blockcircle	1
-	script		:combat:equipitem
-	equipscript	:combat:item_equip
-	unequipscript	:combat:item_unequip
-	hitscript		:weapons:mainhit
-}
-
-
 
 ///////////////////
 //  Two handed mace weapons
@@ -1154,8 +964,6 @@ Weapon 0x0e8a
 	unequipscript	:combat:item_unequip
 	hitscript		:weapons:mainhit
 }
-
-
 
 
 ///////////////////
@@ -1265,133 +1073,6 @@ Weapon 0x16050
 	OldObjtype		0x6050
 }
 
-Weapon 0x26c2
-{
-	Name				CompositeBow
-	Speed			38
-	Damage			5d6
-	Attribute			Archery
-	Projectile		1
-	ProjectileType		0xf3f
-	ProjectileAnim		0xf42
-	ProjectileSound	0x235
-	Anim				0x12
-	MountedAnim		0x1B
-	MissSound			0x239
-	HitSound			0x235
-	MaxHP			150
-	VendorSellsFor		90
-	VendorBuysFor		30
-	blockcircle		1
-	TwoHanded			1
-	script			:combat:equipitem
-	equipscript		:combat:item_equip
-	unequipscript		:combat:item_unequip
-	hitscript			:weapons:mainhit
-}
-
-Weapon 0x26c3
-{
-	Name				RepeatingCrossbow
-	Speed			50
-	Damage			4d6
-	Attribute			Archery
-	Projectile		1
-	ProjectileType		0x1bfb
-	ProjectileAnim		0x1bfe
-	ProjectileSound	0x235
-	Anim				0x13
-	MountedAnim		0x1C
-	HitSound			0x235
-	MissSound			0x239
-	MaxHP			150
-	VendorSellsFor		100
-	VendorBuysFor		33
-	blockcircle		1
-	TwoHanded			1
-	script			:combat:equipitem
-	equipscript		:combat:item_equip
-	unequipscript		:combat:item_unequip
-	hitscript			:weapons:mainhit
-}
-
-Weapon 0x27f0
-{
-	Name				Yumi
-	desc				yumi
-	Speed			25
-	Damage			6d6
-	Attribute			Archery
-	Projectile		1
-	ProjectileType		0xf3f
-	ProjectileAnim		0xf42
-	ProjectileSound	0x235
-	Anim				0x12
-	MountedAnim		0x1B
-	MissSound			0x239
-	HitSound			0x235
-	MaxHP			150
-	VendorSellsFor		120
-	VendorBuysFor		40
-	blockcircle		1
-	TwoHanded			1
-	script			:combat:equipitem
-	equipscript		:combat:item_equip
-	unequipscript		:combat:item_unequip
-	hitscript			:weapons:mainhit
-}
-
-Weapon 0x2d2a
-{
-	Name				longbow
-	desc				elven composite longbow
-	Speed			38
-	Damage			5d6
-	Attribute			Archery
-	Projectile		1
-	ProjectileType		0xf3f
-	ProjectileAnim		0xf42
-	ProjectileSound	0x235
-	Anim				0x12
-	MountedAnim		0x1B
-	MissSound			0x239
-	HitSound			0x235
-	MaxHP			150
-	VendorSellsFor		150
-	VendorBuysFor		50
-	blockcircle		1
-	TwoHanded			1
-	script			:combat:equipitem
-	equipscript		:combat:item_equip
-	unequipscript		:combat:item_unequip
-	hitscript			:weapons:mainhit
-}
-
-Weapon 0x2d2b
-{
-	Name				shortbow
-	desc				elven shortbow
-	Speed			50
-	Damage			4d6
-	Attribute			Archery
-	Projectile		1
-	ProjectileType		0xf3f
-	ProjectileAnim		0xf42
-	ProjectileSound	0x235
-	Anim				0x12
-	MountedAnim		0x1B
-	MissSound			0x239
-	HitSound			0x235
-	MaxHP			150
-	VendorSellsFor		135
-	VendorBuysFor		45
-	blockcircle		1
-	TwoHanded			1
-	script			:combat:equipitem
-	equipscript		:combat:item_equip
-	unequipscript		:combat:item_unequip
-	hitscript			:weapons:mainhit
-}
 
 ///////////////////
 //  MAGIC WANDS
@@ -1472,6 +1153,249 @@ Weapon 0x0DF5
 	script			:magic:wands
 	BlocksCastingIfInHand	0
 }
+
+
+///////////////////////
+// Age of Shadows
+///////////////////////
+
+Weapon 0x26bb
+{
+	Name			BoneHarvester
+	Speed		35
+	Damage		4d6+3
+	Attribute		Swords
+	MaxHP		150
+	Script		::bladed
+	HitSound		0x23C
+	MissSound		0x23A
+	Anim			0x9
+	MountedAnim	0x1A
+	VendorSellsFor	150
+	VendorBuysFor	60
+	blockcircle	1
+	equipscript	:combat:item_equip
+	unequipscript	:combat:item_unequip
+	hitscript		:weapons:mainhit
+}
+
+Weapon 0x26ba
+{
+	Name			Scythe
+	Speed		23
+	Damage		6d6+3
+	Attribute		Swords
+	MaxHP		200
+	Script		::bladed
+	HitSound		0x23C
+	MissSound		0x23A
+	Anim			0xD
+	MountedAnim	0x1D
+	VendorSellsFor	200
+	VendorBuysFor	80
+	blockcircle	1
+	TwoHanded		1
+	equipscript	:combat:item_equip
+	unequipscript	:combat:item_unequip
+	hitscript		:weapons:mainhit
+}
+
+Weapon 0x26bd
+{
+	Name			BladedStaff
+	Speed		23
+	Damage		6d6+3
+	Attribute		Swords
+	MaxHP		200
+	Script		::bladed
+	HitSound		0x23C
+	MissSound		0x23A
+	Anim			0xD
+	MountedAnim	0x1D
+	VendorSellsFor	200
+	VendorBuysFor	80
+	blockcircle	1
+	TwoHanded		1
+	equipscript	:combat:item_equip
+	unequipscript	:combat:item_unequip
+	hitscript		:weapons:mainhit
+}
+
+Weapon 0x26c1
+{
+	Name			CrescentBlade
+	Speed		50
+	Damage		3d6+3
+	Attribute		Swords
+	MaxHP		200
+	Script		::bladed
+	HitSound		0x23C
+	MissSound		0x23A
+	Anim			0xD
+	MountedAnim	0x1D
+	VendorSellsFor	200
+	VendorBuysFor	80
+	blockcircle	1
+	TwoHanded		1
+	equipscript	:combat:item_equip
+	unequipscript	:combat:item_unequip
+	hitscript		:weapons:mainhit
+}
+
+Weapon 0x26ce
+{
+	Name			PaladinSword
+	Speed		23
+	Damage		6d6+3
+	Attribute		Swords
+	MaxHP		200
+	Script		::bladed
+	HitSound		0x23C
+	MissSound		0x23A
+	Anim			0xD
+	MountedAnim	0x1D
+	VendorSellsFor	200
+	VendorBuysFor	80
+	blockcircle	1
+	TwoHanded		1
+	equipscript	:combat:item_equip
+	unequipscript	:combat:item_unequip
+	hitscript		:weapons:mainhit
+}
+
+Weapon 0x26c0
+{
+	Name			Lance
+	Speed		35
+	Damage		4d6+3
+	Attribute		Fencing
+	MaxHP		150
+	Script		::bladed
+	HitSound		0x23C
+	MissSound		0x23A
+	Anim			0xE
+	MountedAnim	0x1A
+	VendorSellsFor	150
+	VendorBuysFor	60
+	blockcircle	1
+	script		:combat:equipitem
+	equipscript	:combat:item_equip
+	unequipscript	:combat:item_unequip
+	hitscript		:weapons:mainhit
+}
+
+Weapon 0x26be
+{
+	Name			Pike
+	Speed		23
+	Damage		6d6+3
+	Attribute		Fencing
+	MaxHP		200
+	HitSound		0x23D
+	MissSound		0x23B
+	Anim			0xE
+	MountedAnim	0x1A
+	VendorSellsFor	200
+	VendorBuysFor	80
+	blockcircle	1
+	TwoHanded		1
+	script		:combat:equipitem
+	equipscript	:combat:item_equip
+	unequipscript	:combat:item_unequip
+	hitscript		:weapons:mainhit
+}
+
+Weapon 0x26bf
+{
+	Name			DoubleBladedStaff
+	Speed		50
+	Damage		3d6+3
+	Attribute		Fencing
+	MaxHP		200
+	HitSound		0x23D
+	MissSound		0x23B
+	Anim			0xD
+	MountedAnim	0x1A
+	VendorSellsFor	200
+	VendorBuysFor	80
+	blockcircle	1
+	TwoHanded		1
+	script		:combat:equipitem
+	equipscript	:combat:item_equip
+	unequipscript	:combat:item_unequip
+	hitscript		:weapons:mainhit
+}
+
+Weapon 0x26bc
+{
+	Name			Scepter
+	Speed		35
+	Damage		4d6+3
+	Attribute		Mace
+	MaxHP		100
+	HitSound		0x13C
+	MissSound		0x234
+	Anim			0xB
+	MountedAnim	0x1A
+	VendorSellsFor	70
+	VendorBuysFor	20
+	blockcircle	1
+	script		:combat:equipitem
+	equipscript	:combat:item_equip
+	unequipscript	:combat:item_unequip
+	hitscript		:weapons:mainhit
+}
+
+Weapon 0x26c2
+{
+	Name				CompositeBow
+	Speed			38
+	Damage			5d6
+	Attribute			Archery
+	Projectile		1
+	ProjectileType		0xf3f
+	ProjectileAnim		0xf42
+	ProjectileSound	0x235
+	Anim				0x12
+	MountedAnim		0x1B
+	MissSound			0x239
+	HitSound			0x235
+	MaxHP			150
+	VendorSellsFor		90
+	VendorBuysFor		30
+	blockcircle		1
+	TwoHanded			1
+	script			:combat:equipitem
+	equipscript		:combat:item_equip
+	unequipscript		:combat:item_unequip
+	hitscript			:weapons:mainhit
+}
+
+Weapon 0x26c3
+{
+	Name				RepeatingCrossbow
+	Speed			50
+	Damage			4d6
+	Attribute			Archery
+	Projectile		1
+	ProjectileType		0x1bfb
+	ProjectileAnim		0x1bfe
+	ProjectileSound	0x235
+	Anim				0x13
+	MountedAnim		0x1C
+	HitSound			0x235
+	MissSound			0x239
+	MaxHP			150
+	VendorSellsFor		100
+	VendorBuysFor		33
+	blockcircle		1
+	TwoHanded			1
+	script			:combat:equipitem
+	equipscript		:combat:item_equip
+	unequipscript		:combat:item_unequip
+	hitscript			:weapons:mainhit
+}
+
 
 ///////////////////////
 // Samurai Empire
@@ -1706,6 +1630,33 @@ Weapon 0x27af
 	hitscript		:weapons:mainhit
 }
 
+Weapon 0x27f0
+{
+	Name				Yumi
+	desc				yumi
+	Speed			25
+	Damage			6d6
+	Attribute			Archery
+	Projectile		1
+	ProjectileType		0xf3f
+	ProjectileAnim		0xf42
+	ProjectileSound	0x235
+	Anim				0x12
+	MountedAnim		0x1B
+	MissSound			0x239
+	HitSound			0x235
+	MaxHP			150
+	VendorSellsFor		120
+	VendorBuysFor		40
+	blockcircle		1
+	TwoHanded			1
+	script			:combat:equipitem
+	equipscript		:combat:item_equip
+	unequipscript		:combat:item_unequip
+	hitscript			:weapons:mainhit
+}
+
+
 ///////////////////////
 // Mondain's Legacy
 ///////////////////////
@@ -1917,6 +1868,59 @@ Weapon 0x2d35
 	unequipscript	:combat:item_unequip
 	hitscript		:weapons:mainhit
 }
+
+Weapon 0x2d2a
+{
+	Name				longbow
+	desc				elven composite longbow
+	Speed			38
+	Damage			5d6
+	Attribute			Archery
+	Projectile		1
+	ProjectileType		0xf3f
+	ProjectileAnim		0xf42
+	ProjectileSound	0x235
+	Anim				0x12
+	MountedAnim		0x1B
+	MissSound			0x239
+	HitSound			0x235
+	MaxHP			150
+	VendorSellsFor		150
+	VendorBuysFor		50
+	blockcircle		1
+	TwoHanded			1
+	script			:combat:equipitem
+	equipscript		:combat:item_equip
+	unequipscript		:combat:item_unequip
+	hitscript			:weapons:mainhit
+}
+
+Weapon 0x2d2b
+{
+	Name				shortbow
+	desc				elven shortbow
+	Speed			50
+	Damage			4d6
+	Attribute			Archery
+	Projectile		1
+	ProjectileType		0xf3f
+	ProjectileAnim		0xf42
+	ProjectileSound	0x235
+	Anim				0x12
+	MountedAnim		0x1B
+	MissSound			0x239
+	HitSound			0x235
+	MaxHP			150
+	VendorSellsFor		135
+	VendorBuysFor		45
+	blockcircle		1
+	TwoHanded			1
+	script			:combat:equipitem
+	equipscript		:combat:item_equip
+	unequipscript		:combat:item_unequip
+	hitscript			:weapons:mainhit
+}
+
 
 ///////////////////////
 // Stygian Abyss
