--- a/trunk/099/pkg/npcs/townfolk/barber/itemdesc.cfg
+++ b/trunk/099/pkg/npcs/townfolk/barber/itemdesc.cfg
@@ -98,70 +98,123 @@ Item 0x2050
 	Name		dupre
 }
 
+//-=[ Elven Hair ]=--------------------------
+Item 0x2fbf
+{
+	Name		elfmidlong
+}
+
+Item 0x2fc0
+{
+	Name		elflongfeather
+}
+
+Item 0x2fc1
+{
+	Name		elfshort
+}
+
+Item 0x2fc2
+{
+	Name		elfmullet
+}
+
+Item 0x2fcc
+{
+	Name		elfflower
+}
+
+Item 0x2fcd
+{
+	Name		elflonghair
+}
+
+Item 0x2fce
+{
+	Name		elftopknot
+}
+
+Item 0x2fcf
+{
+	Name		elflongbraid
+}
+
+Item 0x2fd0
+{
+	Name		elfbuns
+}
+
+Item 0x2fd1
+{
+	Name		elfspikedhair
+}
+
+
+
 //-=[ Horns ]=--------------------------
 Item 0x4258
 {
-	Name		HornStyle1
+	Name		MaleHornStyle1
 }
 Item 0x4259
 {
-	Name		HornStyle2
+	Name		MaleHornStyle2
 }
 Item 0x425A
 {
-	Name		HornStyle3
+	Name		MaleHornStyle3
 }
 Item 0x425B
 {
-	Name		HornStyle4
+	Name		MaleHornStyle4
 }
 Item 0x425C
 {
-	Name		HornStyle5
+	Name		MaleHornStyle5
 }
 Item 0x425D
 {
-	Name		HornStyle6
+	Name		MaleHornStyle6
 }
 Item 0x425E
 {
-	Name		HornStyle7
+	Name		MaleHornStyle7
 }
 Item 0x425F
 {
-	Name		HornStyle8
+	Name		MaleHornStyle8
 }
 Item 0x4261
 {
-	Name		HornStyle9
+	Name		FemaleHornStyle1
 }
 Item 0x4262
 {
-	Name		HornStyle10
+	Name		FemaleHornStyle2
 }
 Item 0x4273
 {
-	Name		HornStyle11
+	Name		FemaleHornStyle3
 }
 Item 0x4274
 {
-	Name		HornStyle12
+	Name		FemaleHornStyle4
 }
 Item 0x4275
 {
-	Name		HornStyle13
+	Name		FemaleHornStyle5
 }
 Item 0x42AA
 {
-	Name		HornStyle14
+	Name		FemaleHornStyle6
 }
 Item 0x42AB
 {
-	Name		HornStyle15
+	Name		FemaleHornStyle7
 }
 Item 0x42B1
 {
-	Name		HornStyle16
+	Name		FemaleHornStyle8
 }
 
 //-=[ Facial Horns ]=--------------------------
