--- a/trunk/099/pkg/npcs/townfolk/merchants/mrcspawn.cfg
+++ b/trunk/099/pkg/npcs/townfolk/merchants/mrcspawn.cfg
@@ -390,6 +390,7 @@ ProductGroup    Deeds
 	Item		0x17008	2		//playervendordeed
 	Item		0x16019	1		//smallstoneandplasterhousedeed
 	Item		0x1601A	1		//smallstonehousedeed
+	Item 		0x1622F	1		//smallbrickhousedeed
 	Item		0x1601B	1		//smallwoodenhousedeed
 	Item		0x1601C	1		//smallplasterhousedeed
 	Item		0x1601D	1		//smallwoodandstrawhousedeed
@@ -408,6 +409,7 @@ ProductGroup    Deeds
 	Item 		0x1622B	1		//twostorylogcabindeed
 	Item 		0x1622C	1		//twostoryvilladeed
 	Item 		0x1622D	1		//largemarblepatiohousedeed
+	Item 		0x16230	100		//foundation18x18deed
 }
 
 ProductGroup    Circle1Spells
