--- a/trunk/099/pkg/world/moongates/config/moongate.cfg
+++ b/trunk/099/pkg/world/moongates/config/moongate.cfg
@@ -35,10 +35,10 @@ Setting britannia
 	Town		Britain		1336	1997	5
 	Town		Jhelom		1499	3771	5
 	Town		Yew			771	753	5
-	Town		Minoc			2701	693	5
+	Town		Minoc		2701	693	5
 	Town		Trinsic		1828	2948	-20
 	Town		Skara_Brae		643	2067	5
-	Town		Magincia		3564	2140	31
+	Town		New_Magincia	3564	2140	31
 }
 
 //Setting britannia_alt
@@ -56,11 +56,21 @@ Setting britannia
 //	Town		New_Magincia	3564 2140 34
 //}
 
-//Setting ilshenar
-//{
-//	Faction		Ilshenar
-// 	Active		0
-//}
+Setting ilshenar
+{
+	Faction		Ilshenar
+ 	Active		1
+	
+	Town		Honesty		722	1366	-60
+	Town		Compassion		1215	467	-13
+	Town		Valor			528	216	-45
+	Town		Justice		987	1011	-32
+	Town		Sacrifice		1174	1286	-30
+	Town		Honor		744	724	-28
+	Town		Spirituality		1532	1340	-3
+	Town		Humility		281	1016	0
+	Town		Chaos		1721	218	96
+}
 
 Setting malas
 {
