--- a/trunk/099/config/equip.cfg
+++ b/trunk/099/config/equip.cfg
@@ -216,12 +216,22 @@ equip 0xe75
 
 Equipment bankerelf
 {
-	Equip	0x317A 0         // boots
-	Equip	0x3179 0x2      // long pants
+	Equip	0x317A 0         // elven boots
+	Equip	0x3179 0x2      // elven pants
 	Equip 0x3176  1305      // fancy shirt, white
-	Equip	0x2fc0 1107    // Long Hair
+	Equip	0x2fc0 1107    // Long Feather Hair
 	Equip	0x1FFD  0        // a surcoat
 	Equip	0x1515 0x2F1    // a cloak
+}
+
+Equipment bankertokuno
+{
+	Equip	0x27e1 0         // waraji and tabi
+	Equip	0x27e5 0x2      // tattsuke-hakama
+	Equip 0x3176  1305      // fancy elven shirt, white
+	Equip	0x203c 1107    // Long Hair
+	Equip	0x27ec  0        // jin-baori
+	Equip	0x27eb 0    // an obi
 }
 
 
@@ -609,6 +619,16 @@ Equipment TownGuardElf
 	Equip	RuneBlade
 }
 
+Equipment TownGuardTokuno
+{
+	Equip	PlateKabuto
+	Equip	PlateDo
+	Equip	PlateHiroSode
+	Equip	PlateSuneate
+	Equip	WarajiAndTabi
+	Equip	PlateMempo
+	Equip	Daisho
+}
 
 Equipment shipcaptain
 {
@@ -625,25 +645,21 @@ Equipment shipcaptain
 
 Equipment ninja
 {
-	Equip	0x13cc 	1109
-	Equip	0x1db9 	1109
-	Equip	0x170b 	1109
-	Equip	0x13c5 	1109
-	Equip	0x13c6 	1109
-	Equip	0x13c7 	1109
-	Equip	0x13cb 	1109
+	Equip	0x27de 	1109
+	Equip	0x27d9 	1109
+	Equip	0x27e2 	1109
+	Equip	0x27dd 	1109
+	Equip	0x27dc 	1109
 	Equip	0x13fe 	0
 }
 
 Equipment snowninja
 {
-	Equip	0x13cc 	1072
-	Equip	0x1db9 	1072
-	Equip	0x170b 	1072
-	Equip	0x13c5 	1072
-	Equip	0x13c6 	1072
-	Equip	0x13c7 	1072
-	Equip	0x13cb 	1072
+	Equip	0x27de 	1072
+	Equip	0x27d9 	1072
+	Equip	0x27e2 	1072
+	Equip	0x27dd 	1072
+	Equip	0x27dc 	1072
 	Equip	0x13fe 	0
 }
 
