--- a/trunk/099/config/itemdesc.cfg
+++ b/trunk/099/config/itemdesc.cfg
@@ -391,7 +391,7 @@ Item 0x17055
 
 Item 0x100e
 {
-	Name			ironkey
+	Name			copperkey
 	Script		key
 	Newbie		1
 	VendorSellsFor	9
@@ -401,6 +401,15 @@ Item 0x100e
 Item 0x100f
 {
 	Name			goldkey
+	Script		key
+	Newbie		1
+	VendorSellsFor	9
+	Weight		1/10
+}
+
+Item 0x1010
+{
+	Name			ironkey
 	Script		key
 	Newbie		1
 	VendorSellsFor	9
