--- a/trunk/099/pkg/combat/armor/itemdesc.cfg
+++ b/trunk/099/pkg/combat/armor/itemdesc.cfg
@@ -2650,6 +2650,23 @@ Armor 0x2643
 	unequipscript	:combat:item_unequip
 }
 
+Armor 0x264b
+{
+	Name			DragonGorget
+	Desc			dragon gorget
+	AR			25
+	Coverage		Neck
+	VendorSellsFor	220
+	VendorBuysFor	70
+	MaxHP		240
+	blockcircle	1
+	strrequired	83
+	DexPenalty	2
+	script		:combat:equipitem
+	equipscript	:combat:item_equip
+	unequipscript	:combat:item_unequip
+}
+
 Armor 0x2645
 { 
 	Name			DragonHelm
