--- a/trunk/099/pkg/items/containers/itemdesc.cfg
+++ b/trunk/099/pkg/items/containers/itemdesc.cfg
@@ -12,6 +12,7 @@ Container 0x2006
 	Maxweight			65535
 	ControlScript		control_corpse
 	OnRemoveScript		onremove_corpse
+	OnInsertScript		oninsert_corpse
 }
 
 Container 0x0E7C
