--- a/trunk/099/pkg/skills/craftingskills/tinkering/itemdesc.cfg
+++ b/trunk/099/pkg/skills/craftingskills/tinkering/itemdesc.cfg
@@ -300,3 +300,59 @@ Item 0x1be9
 	VendorSellsFor	100
 	VendorBuysFor	100
 }
+
+Item 0x2804
+{
+	Name			dart
+	Desc			dart%s
+	Weight		1/50
+	VendorSellsFor	5
+}
+
+Item 0x16055
+{
+	Name			firedart
+	Desc			fire dart%s
+	Graphic		0x2804
+	Color		1644
+	Weight		1/50
+	VendorSellsFor	500
+}
+
+Item 0x16056
+{
+	Name			frostdart
+	Desc			frost dart%s
+	Graphic		0x2804
+	Color		1165
+	Weight		1/50
+	VendorSellsFor	500
+}
+
+Item 0x27ac
+{
+	Name			shuriken
+	Weight		1/50
+	VendorSellsFor	5
+}
+
+Item 0x16057
+{
+	Name			fireshuriken
+	Desc			fire shuriken%s
+	Graphic		0x27ac
+	Color		1644
+	Weight		1/50
+	VendorSellsFor	500
+}
+
+Item 0x16058
+{
+	Name			frostshuriken
+	Desc			frost shuriken%s
+	Graphic		0x27ac
+	Color		1165
+	Weight		1/50
+	VendorSellsFor	500
+}
+
