--- a/trunk/099/pkg/skills/craftingskills/tinkering/tinkering.cfg
+++ b/trunk/099/pkg/skills/craftingskills/tinkering/tinkering.cfg
@@ -99,14 +99,21 @@ tinkeritem 0x105b
 
 tinkeritem 0x100e
 {
-	name			a gold key
+	name			a copper key
 	material		2
 	skill		40
 }
 
 tinkeritem 0x100f
 {
-	name			a copper key
+	name			a gold key
+	material		2
+	skill		40
+}
+
+tinkeritem 0x1010
+{
+	name			an iron key
 	material		2
 	skill		40
 }
@@ -736,6 +743,23 @@ tinkeritem 0x1ebc
 	name			tinker's tools
 	material		20 
 	skill		80
+}
+
+
+tinkeritem 0x2804
+{ 
+	Name			dart
+	material		1
+	skill		20
+	stackable		1
+}
+
+tinkeritem 0x27ac
+{ 
+	Name			shuriken
+	material		1
+	skill		20
+	stackable		1
 }
 
 
