--- a/trunk/099/pkg/world/spawners/regionspawner/regionspawn.cfg
+++ b/trunk/099/pkg/world/spawners/regionspawner/regionspawn.cfg
@@ -1124,13 +1124,28 @@ region 200
 }
 
 //Heartwood
-Region 201
+region 201
 {
 	rect 6980 340 7090 425
 	group townies		10
 	group henchmen		10
 }
 
+//Sea Market
+region 202
+{
+	rect 4530 2300 4573 2406
+	group townies		10
+}
+
+//Zento
+region 203
+{
+	rect 676 1205 787 1307
+	realm		tokuno
+	group townies		10
+	group henchmen		10
+}
 
 
 
