--- a/trunk/099/regions/wood.cfg
+++ b/trunk/099/regions/wood.cfg
@@ -343,6 +343,7 @@ Global
 	ObjType	0x0DAA
 	ObjType	0x0DAB
 //Yew Tree
+	ObjType	0x12B5
 	ObjType	0x12B6
 	ObjType	0x12B7
 	ObjType	0x12B8
@@ -360,7 +361,320 @@ Global
 	ObjType	0x12C5
 	ObjType	0x12C6
 	ObjType	0x12C7
-
+//New trees
+	ObjType	0x224a
+	ObjType	0x224b
+	ObjType	0x224c
+	ObjType	0x224d
+//Tokuno trees
+	ObjType	0x246c
+	ObjType	0x246d
+	ObjType	0x246e
+	ObjType	0x246f
+	ObjType	0x2470
+	ObjType	0x2471
+	ObjType	0x2472
+	ObjType	0x2473
+	ObjType	0x2474
+	ObjType	0x2475
+	ObjType	0x2476
+	ObjType	0x2477
+	ObjType	0x2478
+	ObjType	0x2479
+	ObjType	0x247a
+	ObjType	0x247b
+	ObjType	0x247c
+	ObjType	0x247d
+	ObjType	0x247e
+	ObjType	0x26ed
+	ObjType	0x26ee
+	ObjType	0x26ef
+	ObjType	0x26f0
+	ObjType	0x26f1
+	ObjType	0x26f2
+	ObjType	0x26f3
+//Heartwood trees
+	ObjType	0x309c
+	ObjType	0x309d
+	ObjType	0x309e
+	ObjType	0x309f
+	ObjType	0x30a0
+	ObjType	0x30a1
+	ObjType	0x30a2
+	ObjType	0x30a3
+	ObjType	0x30a4
+	ObjType	0x30a5
+	ObjType	0x30a6
+	ObjType	0x30a7
+	ObjType	0x30a8
+	ObjType	0x30a9
+	ObjType	0x30aa
+	ObjType	0x30ab
+	ObjType	0x30ac
+	ObjType	0x30ad
+	ObjType	0x30ae
+	ObjType	0x30af
+	ObjType	0x30b0
+	ObjType	0x30b1
+	ObjType	0x30b2
+	ObjType	0x30b3
+	ObjType	0x30b4
+	ObjType	0x30b5
+	ObjType	0x30b6
+	ObjType	0x30b7
+	ObjType	0x30b8
+	ObjType	0x30b9
+	ObjType	0x30ba
+	ObjType	0x30bb
+	ObjType	0x30bc
+	ObjType	0x30bd
+	ObjType	0x30be
+	ObjType	0x30bf
+	ObjType	0x30c0
+	ObjType	0x30c1
+	ObjType	0x30c2
+	ObjType	0x30c3
+	ObjType	0x30c4
+	ObjType	0x30c5
+	ObjType	0x30c6
+	ObjType	0x30c7
+	ObjType	0x30c8
+	ObjType	0x30c9
+	ObjType	0x30ca
+	ObjType	0x30cb
+	ObjType	0x30cc
+	ObjType	0x30cd
+	ObjType	0x30ce
+	ObjType	0x30cf
+	ObjType	0x30d0
+	ObjType	0x30d1
+	ObjType	0x30d2
+	ObjType	0x30d3
+	ObjType	0x30d4
+	ObjType	0x30d5
+	ObjType	0x30d6
+	ObjType	0x30d7
+	ObjType	0x30d8
+	ObjType	0x30d9
+	ObjType	0x30da
+	ObjType	0x30db
+	ObjType	0x30dc
+	ObjType	0x30dd
+	ObjType	0x30de
+//more new trees
+	ObjType	0x3122
+	ObjType	0x3123
+	ObjType	0x3124
+	ObjType	0x36a0
+	ObjType	0x36a1
+//more Heartwood trees
+	ObjType	0x39a3
+	ObjType	0x39a4
+	ObjType	0x39a5
+	ObjType	0x39a6
+	ObjType	0x39a7
+	ObjType	0x39a8
+	ObjType	0x39a9
+	ObjType	0x39aa
+	ObjType	0x39ab
+	ObjType	0x39ac
+	ObjType	0x39ad
+	ObjType	0x39ae
+	ObjType	0x39af
+	ObjType	0x39b0
+	ObjType	0x39b1
+	ObjType	0x39b2
+	ObjType	0x39b3
+	ObjType	0x39b4
+	ObjType	0x39b5
+	ObjType	0x39b6
+	ObjType	0x39b7
+	ObjType	0x39b8
+	ObjType	0x39b9
+	ObjType	0x39ba
+	ObjType	0x39bb
+	ObjType	0x39bc
+	ObjType	0x39bd
+	ObjType	0x39be
+	ObjType	0x39bf
+	ObjType	0x39c0
+	ObjType	0x39c1
+	ObjType	0x39c2
+	ObjType	0x39c3
+	ObjType	0x39c4
+	ObjType	0x39c5
+	ObjType	0x39c6
+	ObjType	0x39c7
+	ObjType	0x39c8
+	ObjType	0x39c9
+	ObjType	0x39ca
+	ObjType	0x39cb
+	ObjType	0x39cc
+	ObjType	0x39cd
+	ObjType	0x39ce
+	ObjType	0x39cf
+	ObjType	0x39d0
+	ObjType	0x39d1
+	ObjType	0x39d2
+	ObjType	0x39d3
+	ObjType	0x39e7
+	ObjType	0x39e8
+	ObjType	0x39e9
+	ObjType	0x39ea
+	ObjType	0x39eb
+	ObjType	0x39ec
+	ObjType	0x39ed
+	ObjType	0x39ee
+	ObjType	0x39ef
+	ObjType	0x39f0
+	ObjType	0x39f1
+	ObjType	0x39f2
+	ObjType	0x39f3
+	ObjType	0x39f4
+	ObjType	0x39f5
+	ObjType	0x39f6
+	ObjType	0x39f7
+	ObjType	0x39f8
+	ObjType	0x39f9
+	ObjType	0x39fa
+	ObjType	0x39fb
+	ObjType	0x39fc
+	ObjType	0x39fd
+	ObjType	0x39fe
+	ObjType	0x39ff
+	ObjType	0x3a00
+	ObjType	0x3a01
+	ObjType	0x3a02
+	ObjType	0x3a03
+	ObjType	0x3a04
+	ObjType	0x3a05
+	ObjType	0x3a06
+	ObjType	0x3a07
+	ObjType	0x3a08
+	ObjType	0x3a09
+	ObjType	0x3a0a
+	ObjType	0x3a0b
+	ObjType	0x3a0c
+	ObjType	0x3a0d
+	ObjType	0x3a0e
+	ObjType	0x3a0f
+	ObjType	0x3a10
+	ObjType	0x3a11
+	ObjType	0x3a12
+	ObjType	0x3a13
+	ObjType	0x3a14
+	ObjType	0x3a15
+	ObjType	0x3a16
+	ObjType	0x3a17
+	ObjType	0x3a18
+	ObjType	0x3a19
+	ObjType	0x3a1a
+	ObjType	0x3a1b
+	ObjType	0x3a1c
+	ObjType	0x3a1d
+	ObjType	0x3a1e
+	ObjType	0x3a33
+	ObjType	0x3a34
+	ObjType	0x3a35
+	ObjType	0x3a36
+	ObjType	0x3a37
+	ObjType	0x3a38
+	ObjType	0x3a39
+	ObjType	0x3a3a
+	ObjType	0x3a3b
+	ObjType	0x3a3c
+	ObjType	0x3a3d
+	ObjType	0x3a3e
+	ObjType	0x3a3f
+	ObjType	0x3a40
+	ObjType	0x3a41
+	ObjType	0x3a42
+	ObjType	0x3a43
+	ObjType	0x3a44
+	ObjType	0x3a9c
+	ObjType	0x3a9d
+	ObjType	0x3a9e
+	ObjType	0x3a9f
+	ObjType	0x3aa0
+	ObjType	0x3aa1
+	ObjType	0x3aa2
+	ObjType	0x3aa3
+	ObjType	0x3aa4
+	ObjType	0x3aa5
+	ObjType	0x3aa6
+	ObjType	0x3aa7
+	ObjType	0x3aa8
+	ObjType	0x3aa9
+	ObjType	0x3aaa
+	ObjType	0x3aab
+	ObjType	0x3aac
+	ObjType	0x3aad
+	ObjType	0x3aae
+	ObjType	0x3aaf
+	ObjType	0x3ab0
+	ObjType	0x3ab1
+	ObjType	0x3ab2
+	ObjType	0x3ab3
+	ObjType	0x3ab4
+	ObjType	0x3ab5
+	ObjType	0x3ab6
+	ObjType	0x3ab7
+	ObjType	0x3ab8
+	ObjType	0x3ab9
+	ObjType	0x3aba
+	ObjType	0x3abb
+	ObjType	0x3abc
+	ObjType	0x3abd
+	ObjType	0x3abe
+	ObjType	0x3abf
+	ObjType	0x3ac0
+	ObjType	0x3ac1
+	ObjType	0x3ac2
+	ObjType	0x3ac3
+	ObjType	0x3ac4
+	ObjType	0x3ac5
+	ObjType	0x3ac6
+	ObjType	0x3ac7
+	ObjType	0x3ac8
+	ObjType	0x3ac9
+	ObjType	0x3aca
+	ObjType	0x3acb
+	ObjType	0x3acc
+	ObjType	0x3acd
+	ObjType	0x3ace
+	ObjType	0x3acf
+	ObjType	0x3ad0
+	ObjType	0x3ad1
+	ObjType	0x3ad2
+	ObjType	0x3ad3
+	ObjType	0x3ad4
+	ObjType	0x3ad5
+	ObjType	0x3ad6
+	ObjType	0x3ad7
+	ObjType	0x3ad8
+	ObjType	0x3ad9
+	ObjType	0x3ada
+	ObjType	0x3adb
+	ObjType	0x3adc
+	ObjType	0x3add
+	ObjType	0x3ade
+	ObjType	0x3adf
+	ObjType	0x3ae0
+	ObjType	0x3ae1
+	ObjType	0x3ae2
+	ObjType	0x3ae3
+	ObjType	0x3ae4
+	ObjType	0x3ae5
+	ObjType	0x3ae6
+	ObjType	0x3ae7
+	ObjType	0x3ae8
+	ObjType	0x3ae9
+	ObjType	0x3aea
+	ObjType	0x3aeb
+	ObjType	0x3aec
+	ObjType	0x3aed
+	ObjType	0x3aee
+	ObjType	0x3aef
 //Farming objects
 	ObjType	0x0C5C
 	ObjType	0x0C5D
@@ -391,3 +705,10 @@ Region The Whole World
     Range               0 0 5119 4095
 }
 
+Region Heartwood
+{
+    UnitsPerArea        50
+    SecondsPerRegrow    60
+    Capacity            2000
+    Range               6910 258 7167 511
+}
